# Rust-BTC-Passphrase-Finder

./: .gitignore  Cargo.toml  README.md  config.toml  setup_env.sh
src/: common.rs  config.rs  find_passphrase.rs  find_taproot_passphrase.rs  generate_address.rs  generate_taproot_address.rs  main.rs  passphrase_generater.rs
wordlists/: wordlist.txt
