[package]
name = "rust_btc_passphrase_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin_v028 = { package = "bitcoin", version = "0.28", features = ["secp-recovery"] }
bitcoin_v027 = { package = "bitcoin", version = "0.27.0" }
secp256k1 = { version = "0.22", features = ["bitcoin_hashes"] }
bip39 = "2.0.0"
rand = "0.8.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
indicatif = "0.16"
rayon = "1.5"
memmap = "0.7"
log = "0.4"
simplelog = "0.11"
dialoguer = "0.9"